--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            moduleName "backend_jni"
+        }
+    }
+    sourceSets {
+        main {
+            jni.srcDirs = []
+        }
     }
     buildTypes {
         release {
